# upkie

./: .bazelrc  .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  BUILD  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CPPLINT.cfg  Doxyfile  FloorContact_8cpp.html  FloorContact_8cpp__incl.map  FloorContact_8cpp__incl.md5  FloorContact_8cpp_source.html  FloorContact_8h.html  FloorContact_8h__dep__incl.map  FloorContact_8h__dep__incl.md5  FloorContact_8h__incl.map  FloorContact_8h__incl.md5  FloorContact_8h_source.html  LICENSE  Makefile  NOTICE  README.md  README_8markdown.html  README_8md.html  README_upkie.md  WORKSPACE  WheelContact_8cpp.html  WheelContact_8cpp__incl.map  WheelContact_8cpp__incl.md5  WheelContact_8cpp_source.html  WheelContact_8h.html  WheelContact_8h__dep__incl.map  WheelContact_8h__dep__incl.md5  WheelContact_8h__incl.map  WheelContact_8h__incl.md5  WheelContact_8h_source.html  WheelOdometry_8cpp.html  (+1383 more)
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: bazel.yml  build.yml  ci.yml  coverage.yml  docs.yml  lint.yml  packaging.yml  pypi.yml  release.yml  test.yml
agent/: __init__.py  __main__.py  height_controller.py  remote_control.py  utils.py  wheel_controller.py  whole_body_controller.py
agent/config/: base.gin  default.gin  rookie.gin
agent/sagittal_balance/: __init__.py  mpc_balancer.py  proxqp_workspace.py  sagittal_balancer.py
agents/blue_balancer/: BUILD  blue_balancer.py  bullet.gin  bullet.py  kinematics.gin  kinematics.py  main.py  pi3hat.gin  spine.yaml  wheel_balancer.gin  wheel_balancer.py  whole_body_controller.gin  whole_body_controller.py
agents/mpc_balancer/: BUILD  README.markdown  README.md  __init__.py  __main__.py  config.gin  height_controller.py  main.py  remote_control.py  requirements.txt  wheel_controller.py
agents/pid_balancer/: BUILD  README.markdown  README.md  bullet.py  main.py  servo_controller.py  wheel_controller.py
agents/pink_balancer/: BUILD  README.markdown  README.md  bullet.gin  kinematics.gin  main.py  pi3hat.gin  pink_balancer.py  wheel_balancer.gin  wheel_balancer.py  whole_body_controller.gin  whole_body_controller.py
agents/ppo_balancer/: BUILD  README.markdown  README.md  config.gin  envs.gin  envs.py  logging.py  main.py  requirements.txt  reward.gin  reward.py  run.py  run_policy.py  schedules.py  settings.gin  settings.py  standing_reward.py  test.py  train.gin  train.py  utils.py  wrappers.py
agents/rl_baselines3_zoo/: __init__.py  __main__.py  enjoy.py  hyperparams.yml  train.py  wrappers.py
agents/rlb3_balancer/: __init__.py
agents/rlb3_trainer/: README.md  __init__.py  enjoy.py  hyperparams.yml  select_env.py  train.py
agents/test_balancer/: BUILD  README.md  agent.py  agent_only.py  (+5 more)
config/: __init__.py  spine.yaml
doc/: Doxyfile  Makefile
docs/: Doxyfile  Makefile  agents.md  code-overview.md  code_overview.md  dev-notes.md  environments.md  gym-environments.md  kinematics.md  observations.md  real-robot-spines.md  real-robot.md  sensors.md  simulation-spines.md  simulation.md  spines.md
envs/: BUILD  __init__.py  reward.py  spine.yaml  standing_reward.py  survival_reward.py  upkie_base_env.py  upkie_legs_env.py  upkie_servos_env.py  upkie_wheels_env.gin  upkie_wheels_env.py  upkie_wheels_reward.py
examples/: .gitignore  BUILD  README.md  async_wheeled_balancing.py  balancing.py  balancing_cookie.py  cpu_isolation.py  custom_init_state.py  direct_servo_control.py  follow_joystick.py  follow_square.py  genesis_balancing.py  genesis_lying_genuflection.py  genesis_mpc_balancing.py  go_forward.py  go_forward_cookie.py  going_forward.py  legged_balancing.py  lying_genuflection.py  model_predictive_control.py  mpc_balancing.py  neutral_configuration.py  pd_balancer.py  pd_balancing.py  pd_control.py  pi_balancer.py  plot_respawn_trajectories.py  pybullet_balancing.py  pybullet_lying_genuflection.py  pybullet_mpc_balancing.py  pybullet_navigation.py  pybullet_pd_balancing.py  real_robot.py  servos_env.py  simulate_external_force.py  simulate_joint_friction.py  simulate_joint_friction_and_noise.py  simulate_sensor_noise.py  spine_mpc_balancing.py  torque_balancer.py  (+14 more)
lessie_balancer/: BUILD  main.py  servo_controller.py
logs/: Makefile
mpc_balancer/: README.md  __init__.py  __main__.py  height_controller.py  remote_control.py  wheel_controller.py
observers/: BUILD  FloorContact.cpp  FloorContact.h  WheelContact.cpp  WheelContact.h  WheelOdometry.cpp  WheelOdometry.h
pid_balancer/: BUILD  README.markdown  README.md  __init__.py  bullet.py  environment.yaml  imu_placement.py  main.py  main_bullet.py  main_standalone.py  servo_controller.py  wheel_controller.py
pypi/: pyproject.toml  tmpflit.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  (+94 more)
spines/: BUILD  airbullet.cpp  bullet.cpp  bullet_balancer_spine.cpp  bullet_spine.cpp  configs.h  lessie_spine.cpp  mock.cpp  mock_spine.cpp  pi3hat.cpp  pi3hat_balancer_spine.cpp  pi3hat_spine.cpp  servo_layout.h  start_bullet_spine.sh  upkie.h  upkie_layout.h
tests/: conftest.py
tools/: bazelisk  configure_cpu_isolation.py  configure_servos  configure_wlan1  cpufreq_ondemand  cpufreq_performance  dump_servo_configs  hard_rezero  power_dist_check  ps_threads  raspunzel  stop_servos  upkie_tool  vcgenall  vcgencheck
tools/pypi/: .gitignore  pyproject.toml  tmpflit.sh
tools/pypi/upkie/: __init__.py
tools/pypi/upkie_locomotion/: __init__.py
upkie/: BUILD  __init__.py  exceptions.py  logging.py  version.h
utils/: BUILD  clamp.py  datetime_now_string.h  filters.py  imu.py  logging.py  pinocchio.py  raspi.py  realtime.py  serialize.py  spdlog.py
(+648 files in other folders)
