[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "upkie"
readme = "README.md"
authors = [
    {name = "Stéphane Caron", email = "stephane.caron@normalesup.org"},
]
maintainers = [
    {name = "Stéphane Caron", email = "stephane.caron@normalesup.org"},
]
dynamic = ["version", "description"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Robot Framework :: Library",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "gymnasium >= 1.0.0",
    "loop-rate-limiters >= 1.0.0",
    "msgpack >= 1.0.2",
    "numpy >= 1.24.3",
    "scipy >= 1.10.0",
    "upkie_description >= 2.1.0",
]
keywords = ["wheeled", "biped", "robot", "balance", "motion", "control", "robotics"]

[project.urls]
Homepage = "https://hackaday.io/project/185729-upkie-wheeled-biped-robots"
Documentation = "https://upkie.github.io/upkie/"
Source = "https://github.com/upkie/upkie"
Tracker = "https://github.com/upkie/upkie/issues"
Changelog = "https://github.com/upkie/upkie/blob/main/CHANGELOG.md"

[tool.flit.sdist]
exclude = [
    "**/*.sh",
    "**/BUILD",
    "**/tests/*",
    ".bazel*",
    ".clang-format",
    ".git*",
    "CONTRIBUTING.md",
    "CPPLINT.cfg",
    "WORKSPACE",
    "agents/",
    "examples/",
    "logs/",
    "spines/",
    "tools/",
    "upkie/cpp",
]
include = [
    "upkie/config/*.py",
    "upkie/envs/*.py",
    "upkie/utils/*.py",
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
upkie = { path = ".", editable = true }

[tool.pixi.dependencies]
gymnasium = ">=1.0.0"
loop-rate-limiters = ">=1.0.0"
msgpack-python = ">=1.0.2"
numpy = ">=1.24.3"
scipy = ">=1.10.0"
upkie_description = ">=2.1.0"

[tool.pixi.feature.agent-mpc-balancer.dependencies]
gin-config = ">=0.5.0"
meshcat-shapes = ">=0.3.0"
pink = ">=3.0.0,<4"
pinocchio = ">=3.1.0,<4"
proxsuite = ">=0.4.1"
qpmpc = ">=3.0.1,<4"

[tool.pixi.feature.agent-mpc-balancer.tasks]
upkie-mpc = "python -m agents.mpc_balancer"

[tool.pixi.feature.agent-trajectory-player.dependencies]
gin-config = ">=0.5.0"
meshcat-shapes = ">=0.3.0"
pandas = "*"
pink = ">=3.0.0,<4"
proxsuite = ">=0.4.1"
qpmpc = ">=3.0.1,<4"

[tool.pixi.feature.agent-trajectory-player.tasks]
upkie-jolly-jumper = "python agents/trajectory_player/run.py agents/trajectory_player/trajectories/upkie_jump_v3.csv"

[tool.pixi.feature.agent-rlb3-trainer.dependencies]
pybullet = ">=3"
stable-baselines3 = ">=2.3.0"
tensorboard = "*"

[tool.pixi.feature.agent-rlb3-trainer.pypi-dependencies]
rl-zoo3 = ">=2.6.0"

[tool.pixi.feature.agent-rlb3-trainer.tasks]
upkie-train-policy = "python agents/rlb3_trainer/train.py"
upkie-enjoy-policy = "python agents/rlb3_trainer/enjoy.py"

[tool.pixi.feature.coverage.dependencies]
lcov = "*"

[tool.pixi.feature.coverage.tasks]
coverage-generate = { cmd = "tools/bazelisk coverage --combined_report=lcov --compilation_mode=fastbuild --instrument_test_targets //..." }
coverage-report = { cmd = "genhtml bazel-out/_coverage/_coverage_report.dat -o bazel-out/_coverage", depends-on = ["coverage-generate"] }
coverage-open = { cmd = "xdg-open bazel-out/_coverage/index.html", depends-on = ["coverage-report"] }

[tool.pixi.feature.docs.dependencies]
doxygen = "<=1.9.5"
graphviz = "*"
make = "*"
"stable-baselines3" = "*"

[tool.pixi.feature.docs.tasks]
docs-make = "doxygen --version && cd docs && make"
docs-open = { cmd = "xdg-open docs/html/index.html", depends-on = ["docs-make"] }

[tool.pixi.feature.genesis]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.feature.genesis.dependencies]
python = "3.10.*"
qpmpc = ">=3.0.1,<4"

[tool.pixi.feature.genesis.pypi-dependencies]
genesis-world = ">=0.2.1"
torch = ">=2.6.0"
torchvision = ">=0.21.0"

[tool.pixi.feature.genesis.tasks]
simulator-genesis = "python examples/model_predictive_control.py --env Upkie-Genesis-Pendulum"

[tool.pixi.feature.lint.dependencies]
six = "*"
ruff = ">=0.4.3"

[tool.pixi.feature.lint.tasks]
lint-bazel = { cmd = "tools/bazelisk test --config lint //upkie/..." }
lint-ruff = { cmd = "ruff check upkie" }
lint-ruff-format = { cmd = "ruff format --check upkie" }
lint = { depends-on = ["lint-bazel", "lint-ruff", "lint-ruff-format"] }

[tool.pixi.feature.pack.dependencies]
gin-config = ">=0.5.0"
meshcat-shapes = ">=0.3.0"
pink = ">=3.0.0,<4"
pinocchio = ">=3.1.0,<4"
pixi-pack = ">=0.7.2"
proxsuite = ">=0.4.1"
qpmpc = ">=3.0.1,<4"
stable-baselines3 = ">=2.3.0"

[tool.pixi.feature.pack.tasks]
pack = "pixi-pack --environment pack --platform linux-aarch64 --ignore-pypi-non-wheel"

[tool.pixi.feature.py39]
dependencies = { python = "3.9.*" }

[tool.pixi.feature.py310]
dependencies = { python = "3.10.*" }

[tool.pixi.feature.py311]
dependencies = { python = "3.11.*" }

[tool.pixi.feature.py312]
dependencies = { python = "3.12.*" }

[tool.pixi.feature.pybullet.dependencies]
gin-config = ">=0.5.0"
meshcat-shapes = ">=0.3.0"
pink = ">=3.0.0,<4"
pinocchio = ">=3.1.0,<4"
proxsuite = ">=0.4.1"
pybullet = ">=3"
qpmpc = ">=3.0.1,<4"

[tool.pixi.feature.pybullet.tasks]
simulator-pybullet = "python examples/model_predictive_control.py --env Upkie-PyBullet-Pendulum"

[tool.pixi.feature.test.dependencies]
pybullet = ">=3"
pytest = "*"
"stable-baselines3" = ">2.3.0"

[tool.pixi.feature.test.tasks]
test = "pytest tests/"

[tool.pixi.environments]
agent-mpc-balancer = { features = ["agent-mpc-balancer"], solve-group = "default" }
agent-rlb3-trainer = { features = ["agent-rlb3-trainer"], solve-group = "default" }
agent-trajectory-player = { features = ["agent-trajectory-player"], solve-group = "default" }
coverage = { features = ["coverage"], solve-group = "default" }
default = { features = [], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }
genesis = { features = ["genesis"], solve-group = "genesis" }
lint = { features = ["lint"], solve-group = "default" }
pack = { features = ["pack"], solve-group = "default" }
pybullet = { features = ["pybullet"], solve-group = "default" }
test-py310 = { features = ["py310", "test"], solve-group = "py310" }
test-py311 = { features = ["py311", "test"], solve-group = "py311" }
test-py312 = { features = ["py312", "test"], solve-group = "py312" }
test-py39 = { features = ["py39", "test"], solve-group = "py39" }

[tool.ruff]
line-length = 79

[tool.ruff.lint]
ignore = [
    "D100",  # we use ## Doxygen comments: https://stackoverflow.com/q/71380065
    "D104",  # we use ## Doxygen comments: https://stackoverflow.com/q/71380065
    "D204",  # ruff does not know we use Doxygen docstrings
    "D205",  # ruff does not know we use Doxygen docstrings
    "D401",  # good for methods but not for class docstrings
    "D405",  # British-style section names are also "proper"!
]
per-file-ignores = { "*/tests/*.py" = ["D"] }
pydocstyle = { convention = "numpy" }
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I001",
    # pydocstyle
    "D"
]
