[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "upkie"
readme = "README.md"
authors = [
    {name = "Stéphane Caron", email = "stephane.caron@normalesup.org"},
]
maintainers = [
    {name = "Stéphane Caron", email = "stephane.caron@normalesup.org"},
]
dynamic = ["version", "description"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Robot Framework :: Library",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "gymnasium",
    "loop-rate-limiters",
    "msgpack",
    "numpy",
    "pyyaml",
    "scipy",
    "upkie-description",
]
keywords = ["wheeled", "biped", "robot", "balance", "motion", "control", "robotics"]

[project.optional-dependencies]
cookie = ["cookie_description >= 1.0"]

[project.urls]
Homepage = "https://hackaday.io/project/185729-upkie-wheeled-biped-robots"
Documentation = "https://upkie.github.io/upkie/"
Source = "https://github.com/upkie/upkie"
Tracker = "https://github.com/upkie/upkie/issues"
Changelog = "https://github.com/upkie/upkie/blob/main/CHANGELOG.md"

[tool.flit.sdist]
exclude = [
    "**/*.sh",
    "**/BUILD",
    "**/tests/*",
    ".bazel*",
    ".clang-format",
    ".git*",
    "CITATION.cff",
    "CONTRIBUTING.md",
    "CPPLINT.cfg",
    "Makefile",
    "WORKSPACE",
    "docs/",
    "examples/",
    "logs/",
    "pixi.lock",
    "spines/",
    "tools/",
    "upkie/cpp",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64", "osx-arm64"]

# ================
# Feature: default
# ================

[tool.pixi.dependencies]
gymnasium = ">=1.2.3,<2"
loop-rate-limiters = ">=1.2.0,<2"
msgpack-python = ">=1.1.2,<2"
numpy = ">=2.2.6,<3"
pyyaml = ">=6.0.3,<7"
scipy = ">=1.15.2,<2"
upkie_description = ">=2.2.0,<3"

[tool.pixi.pypi-dependencies]
upkie = { path = ".", editable = true }

# ============
# Environments
# ============

# Environments in Pixi are defined as sets of features. In this configuration,
# most environments have a corresponding feature and run in the default solve
# group, except simulator environments which run in their own solve groups.

# -------------------
# Environment: cookie
# -------------------

[tool.pixi.environments.cookie]
features = ["cookie", "default"]

[tool.pixi.feature.cookie.dependencies]
pybullet = ">=3.25,<4"
qpmpc = ">=3.1.0,<4"

[tool.pixi.feature.cookie.pypi-dependencies]
cookie_description = ">=1.1.0, <2"

[tool.pixi.feature.cookie.tasks]
cookie-follow-joystick = "python examples/follow_joystick.py --robot cookie"
cookie-go-forward = "python examples/go_forward.py --robot cookie"

# ---------------------
# Environment: coverage
# ---------------------

[tool.pixi.environments.coverage]
features = ["coverage", "default"]

[tool.pixi.feature.coverage.dependencies]
lcov = ">=1.16,<2"

[tool.pixi.feature.coverage.tasks]
coverage = { cmd = "tools/bazelisk coverage --combined_report=lcov --compilation_mode=fastbuild --instrument_test_targets //... && genhtml bazel-out/_coverage/_coverage_report.dat -o bazel-out/_coverage" }
coverage-open = { cmd = "xdg-open bazel-out/_coverage/index.html", depends-on = ["coverage"] }

# -----------------
# Environment: docs
# -----------------

[tool.pixi.environments.docs]
features = ["docs", "default"]

[tool.pixi.feature.docs.dependencies]
doxygen = ">=1.8,<1.9"
graphviz = ">=14.1.2,<15"
make = ">=4.4.1,<5"
"stable-baselines3" = ">=2.7.1,<3"

[tool.pixi.feature.docs.tasks]
docs = "doxygen --version && cd docs && make"
docs-open = { cmd = "xdg-open docs/html/index.html", depends-on = ["docs"] }

# --------------------
# Environment: genesis
# --------------------

[tool.pixi.environments.genesis]
features = ["genesis", "default"]
solve-group = "genesis"

[tool.pixi.feature.genesis]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.feature.genesis.dependencies]
proxsuite = ">=0.7.2,<0.8"
python = "3.10.*"
qpmpc = ">=3.1.0,<4"

[tool.pixi.feature.genesis.pypi-dependencies]
genesis-world = ">=0.4.4, <0.5"
torch = ">=2.10.0, <3"
torchvision = ">=0.25.0, <0.26"

[tool.pixi.feature.genesis.tasks]
simulator-genesis = "python examples/genesis/mpc_balancing.py"

# -----------------
# Environment: lint
# -----------------

[tool.pixi.environments.lint]
features = ["lint", "default"]

[tool.pixi.feature.lint.dependencies]
six = ">=1.17.0,<2"
ruff = ">=0.15.9,<0.16"

[tool.pixi.feature.lint.tasks]
format = { cmd = "ruff format upkie" }
lint-cpp = { cmd = "tools/bazelisk test --config lint //upkie/..." }
lint-python = { cmd = "ruff check upkie && ruff format --check upkie" }
lint-python-fix = { cmd = "ruff check --fix upkie" }
lint = { depends-on = ["lint-cpp", "lint-python"] }

# -----------------
# Environment: real
# -----------------

[tool.pixi.environments.real]
features = ["real", "default"]

[tool.pixi.feature.real.dependencies]
pixi-pack = ">=0.7.6,<0.8"
proxsuite = ">=0.7.2,<0.8"
qpmpc = ">=3.1.0,<4"

[tool.pixi.feature.real.tasks]
pack = "pixi-pack --environment real --platform linux-aarch64 --ignore-pypi-non-wheel"
real-follow-joystick = "python examples/real_robot/follow_joystick.py"

# ---------------------
# Environment: pybullet
# ---------------------

[tool.pixi.environments.pybullet]
features = ["pybullet", "default"]
solve-group = "pybullet"

[tool.pixi.feature.pybullet.dependencies]
proxsuite = ">=0.7.2,<0.8"
pybullet = ">=3.25,<4"
qpmpc = ">=3.1.0,<4"

[tool.pixi.feature.pybullet.tasks]
example-follow-joystick = "python examples/follow_joystick.py"
example-go-forward = "python examples/go_forward.py"
simulator-pybullet = "python examples/pybullet/mpc_balancing.py"

# -----------------
# Environment: test
# -----------------

[tool.pixi.environments.test]
features = ["test", "test-py", "default"]

[tool.pixi.feature.test.dependencies]
proxsuite = ">=0.7.2,<0.8"
pybullet = ">=3.25,<4"
pytest = ">=9.0.2,<10"
qpmpc = ">=3.1.0,<4"
"stable-baselines3" = ">=2.7.1,<3"

[tool.pixi.feature.test-py.tasks]
test = "pytest tests/"

# -----------------------
# Environment: test-py310
# -----------------------

[tool.pixi.environments.test-py310]
features = ["test", "test-py310", "default"]
solve-group = "py310"

[tool.pixi.feature.test-py310.dependencies]
python = "3.10.*"

[tool.pixi.feature.test-py310.tasks]
test-py310 = "pytest tests/"

# -----------------------
# Environment: test-py311
# -----------------------

[tool.pixi.environments.test-py311]
features = ["test", "test-py311", "default"]
solve-group = "py311"

[tool.pixi.feature.test-py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.test-py311.tasks]
test-py311 = "pytest tests/"

# -----------------------
# Environment: test-py312
# -----------------------

[tool.pixi.environments.test-py312]
features = ["test", "test-py312", "default"]
solve-group = "py312"

[tool.pixi.feature.test-py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.test-py312.tasks]
test-py312 = "pytest tests/"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
ignore = [
    "D100",  # we use ## Doxygen comments: https://stackoverflow.com/q/71380065
    "D104",  # we use ## Doxygen comments: https://stackoverflow.com/q/71380065
    "D204",  # ruff does not know we use Doxygen docstrings
    "D205",  # ruff does not know we use Doxygen docstrings
    "D401",  # good for methods but not for class docstrings
    "D405",  # British-style section names are also "proper"!
]
per-file-ignores = { "*/tests/*.py" = ["D"] }
pydocstyle = { convention = "numpy" }
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I001",
    # pydocstyle
    "D"
]
