[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "upkie_locomotion"
readme = "README.md"
authors = [
    {name = "Stéphane Caron", email = "stephane.caron@normalesup.org"},
]
maintainers = [
    {name = "Stéphane Caron", email = "stephane.caron@normalesup.org"},
]
dynamic = ['version', 'description']
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Robot Framework :: Library",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "GitPython >=3.1.30",
    "Pillow >=9.4.0",
    "PyYAML >=6.0",
    "aiofiles >=0.7.0",
    "cloudpickle >=1.6.0",
    "contourpy >=1.0.6",
    "cycler >=0.10.0",
    "fonttools >=4.38.0",
    "gin-config >=0.5.0",
    "gitdb >=4.0.7",
    "gym >=0.21.0",
    "importlib-metadata >=4.13.0",
    "kiwisolver >=1.0.1",
    "loop-rate-limiters >=0.2.0",
    "matplotlib >=3.6.2",
    "msgpack >=0.6.2",
    "numpy >=1.22.0",
    "nvidia-cublas-cu11 >=11.10.3.66",
    "nvidia-cuda-nvrtc-cu11 >=11.7.99",
    "nvidia-cuda-runtime-cu11 >=11.7.99",
    "nvidia-cudnn-cu11 >=8.5.0.96",
    "packaging >=23.0",
    "pandas >=1.5.2",
    "pyparsing >=3.0.9",
    "python-dateutil >=2.8.1",
    "pytz >=2021.1",
    "qpsolvers >=1.9.1",
    "robot_descriptions >=1.3.1",
    "setuptools >=67.4.0",
    "six >=1.15.0",
    "smmap >=4.0.0",
    "stable-baselines3 >=1.7.0",
    "torch >=1.13.1",
    "tqdm >=4.64.1",
    "typing_extensions >=4.5.0",
    "upkie_description >=1.1.0",
    "vulp >=1.0.0",
    "wheel >=0.37.0",
    "zipp >=3.4.1",
]
keywords = ["motion control", "real time", "robotics"]

[project.urls]
Documentation = "https://tasts-robots.org/doc/upkie_locomotion/"
Source = "https://github.com/tasts-robots/upkie_locomotion"
Tracker = "https://github.com/tasts-robots/upkie_locomotion/issues"
Changelog = "https://github.com/tasts-robots/upkie_locomotion/blob/main/CHANGELOG.md"

[tool.flit.sdist]
include = [
    "upkie_locomotion/envs/*.py",
    "upkie_locomotion/observers/base_pitch/*.py",
    "upkie_locomotion/utils/*.py",
]
