[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "upkie_locomotion"
readme = "README.md"
authors = [
    {name = "Stéphane Caron", email = "stephane.caron@normalesup.org"},
]
maintainers = [
    {name = "Stéphane Caron", email = "stephane.caron@normalesup.org"},
]
dynamic = ['version', 'description']
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Robot Framework :: Library",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "gym >=0.21.0",
    "loop-rate-limiters >=0.2.0",
    "numpy >=1.22.0",
    "qpsolvers >=1.9.1",
    "upkie_description >=1.2.0",
    "vulp >=1.1.1",
]
keywords = ["motion control", "real time", "robotics"]

[project.urls]
Documentation = "https://tasts-robots.org/doc/upkie_locomotion/"
Source = "https://github.com/tasts-robots/upkie_locomotion"
Tracker = "https://github.com/tasts-robots/upkie_locomotion/issues"
Changelog = "https://github.com/tasts-robots/upkie_locomotion/blob/main/CHANGELOG.md"

[tool.flit.sdist]
include = [
    "upkie_locomotion/envs/*.py",
    "upkie_locomotion/observers/base_pitch/*.py",
    "upkie_locomotion/utils/*.py",
]
