[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "upkie"
readme = "README.md"
authors = [
    {name = "Stéphane Caron", email = "stephane.caron@normalesup.org"},
]
maintainers = [
    {name = "Stéphane Caron", email = "stephane.caron@normalesup.org"},
]
dynamic = ['version', 'description']
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Robot Framework :: Library",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "gymnasium >=0.28.1",
    "loop-rate-limiters >=0.5.0",
    "mpacklog >=3.0.0",
    "numpy >=1.22.0",
    "upkie_description >=1.4.0",
    "vulp >=1.3.0",
]
keywords = ["wheeled", "biped", "robot", "balance", "motion", "control", "robotics"]

[project.urls]
Documentation = "https://tasts-robots.org/doc/upkie/"
Source = "https://github.com/tasts-robots/upkie"
Tracker = "https://github.com/tasts-robots/upkie/issues"
Changelog = "https://github.com/tasts-robots/upkie/blob/main/CHANGELOG.md"

[tool.flit.sdist]
include = [
    "upkie/envs/*.py",
    "upkie/observers/base_pitch/*.py",
    "upkie/utils/*.py",
]

[tool.ruff]
line-length = 79
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    # "I001",
    # pydocstyle
    "D"
]
ignore = [
    "D401",  # good for methods but not for class docstrings
    "D405",  # British-style section names are also "proper"!
]

[tool.ruff.pydocstyle]
convention = "numpy"
